# themata-api

./: .env.example  Cargo.toml  Dockerfile  README.md  gruvbox.json
k6/: package.json  script.ts
migrations/: .sqruff  20260203140924_tables.sql  20260203141500_theme_count_triggers.sql
src/: data.rs  env.rs  extractors.rs  main.rs  types.rs  ulid.rs
src/handlers/: authenticate.rs  count.rs  create.rs  delete.rs  github_login.rs  like.rs  liked.rs  list.rs  list_user_likes.rs  metrics.rs  mod.rs  read.rs  read_username.rs  schema.rs  unlike.rs  update.rs  update_username.rs
src/types/: data.rs  db.rs  external_exports.rs  internal_exports.rs  metrics.rs  mod.rs  reexports.rs
