[package]
name = "themata-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
reqwest = { version = "0.12.23", default-features = false, features = [
  "json",
  # default features
  "charset",
  "http2",
  "system-proxy",
  # statically compiled tls
  "rustls-tls",
] }
serde = "1.0.219"
serde_json = "1.0.143"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio",
  "chrono",
  "tls-rustls",
] }
chrono = { version = "0.4.41", features = ["serde"] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
redis = { version = "1.0.3", features = [
  "tls-rustls",
  "aio",
  "tokio-comp",
  "tokio-rustls-comp",
] }
tower-http = { version = "0.6.6", features = ["cors"] }
validator = { version = "0.20", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
ulid = { version = "1.2.1" }
axum-valid = "0.24.0"
schemars = "1.2.1"
